# cocos2d-x

./: .gitignore  .gitmodules  README.md
cocos/2d/: CCCamera.cpp  CCCamera.h  CCComponent.h  CCLayer.cpp  CCLayer.h  CCNode.cpp  CCNode.h  CCProgressTimer.cpp  CCProgressTimer.h  libcocos2d.vcxproj
cocos/3d/: CCBillBoard.cpp  CCMesh.cpp  CCSprite3D.cpp
cocos/base/: CCConfiguration.cpp  CCConfiguration.h  CCController-linux-win32.cpp  CCScriptBind.h  CMakeLists.txt  ccConfig.h
cocos/network/: CCDownloader.h  HttpClient-emscripten.cpp
cocos/platform/: CCImage.cpp  CCImage.h  CCPlatformMacros.h  CMakeLists.txt
cocos/platform/android/: CCGL-android.h
cocos/platform/desktop/: CCGLViewImpl-desktop.cpp
cocos/platform/emscripten/: devtools-emscripten.cpp  devtools-emscripten.h
cocos/platform/ios/: CCGL-ios.h
cocos/renderer/: CCFrameBuffer.cpp  CCFrameBuffer.h  CCGLProgramState.cpp  CCGLProgramState.h  CCRenderState.cpp  CCRenderState.h  CCTexture2D.cpp  CCTexture2D.h
cocos/scripting/lua-bindings/: CMakeLists.txt
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_3d_auto.cpp  lua_cocos2dx_audioengine_auto.cpp  lua_cocos2dx_auto.cpp  lua_cocos2dx_cocosbuilder_auto.cpp  lua_cocos2dx_cocosdenshion_auto.cpp  lua_cocos2dx_controller_auto.cpp  lua_cocos2dx_csloader_auto.cpp  lua_cocos2dx_experimental_auto.cpp  lua_cocos2dx_experimental_video_auto.cpp  lua_cocos2dx_experimental_webview_auto.cpp  lua_cocos2dx_extension_auto.cpp  lua_cocos2dx_navmesh_auto.cpp  lua_cocos2dx_physics3d_auto.cpp  lua_cocos2dx_physics_auto.cpp  lua_cocos2dx_spine_auto.cpp  lua_cocos2dx_studio_auto.cpp  lua_cocos2dx_ui_auto.cpp
cocos/scripting/lua-bindings/manual/: CCComponentLua.cpp  CCComponentLua.h  CCLuaBind.cpp  CCLuaBind.h  LuaBasicConversions.cpp  LuaBasicConversions.h
cocos/scripting/lua-bindings/manual/network/: lua_downloader.cpp  lua_xml_http_request.cpp
cocos/scripting/lua-bindings/manual/spine/: lua_cocos2dx_spine_manual.cpp  lua_cocos2dx_spine_manual.hpp
cocos/scripting/lua-bindings/script/cocos2d/: DeprecatedCocos2dClass.lua  json.lua
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt  index.html
templates/lua-template-default/: CMakeLists.txt  index.html
templates/lua-template-default/frameworks/runtime-src/proj.win32/: HelloLua.vcxproj
tests/cpp-effekseer/: CMakeLists.txt
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-fairygui/: CMakeLists.txt  index.html
tests/cpp-imgui/: CMakeLists.txt
tests/cpp-imgui/Classes/: AppDelegate.cpp  HelloImGuiScene.cpp  HelloImGuiScene.h
tests/cpp-postprocessing-bloom/: .cocos-project.json  CMakeLists.txt
tests/cpp-postprocessing-bloom/Classes/: AppDelegate.cpp  BloomScene.cpp  BloomScene.h
tests/cpp-postprocessing-bloom/Resources/: bloom_combine.frag  bloom_extract_brightness.frag  gaussian_blur.frag
tests/cpp-postprocessing-dof/: CMakeLists.txt
tests/cpp-postprocessing-dof/Classes/: AppDelegate.cpp  DofScene.cpp  DofScene.h
tests/cpp-postprocessing-dof/Resources/: depth_of_field.frag
tests/cpp-tests/: CMakeLists.txt  index.html
tests/cpp-tests/Classes/: AppDelegate.cpp  controller.cpp
tests/cpp-tests/Classes/CurlTest/: CurlTest.cpp
tests/lua-empty-test/project/: CMakeLists.txt
tests/lua-tests/: .cocos-project.json
tests/lua-tests/project/: CMakeLists.txt
tools/editor/: README.md  components.js  controls.js  data.js  default.js  index.html  index.js  style.css
tools/editor/renderer/: .cocos-project.json
tools/editor/renderer/project/: CMakeLists.txt
tools/editor/renderer/project/Classes/: AppDelegate.cpp
tools/editor/renderer/src/: config.lua  editor.lua  main.lua
tools/tolua/: cocos2dx_spine.ini
